Bug 89218 - lower_instructions.cpp:648:48: error: invalid suffix 'd' on floating constant
Summary: lower_instructions.cpp:648:48: error: invalid suffix 'd' on floating constant
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium blocker
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-02-19 06:34 UTC by Vinson Lee
Modified: 2015-02-19 06:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2015-02-19 06:34:25 UTC
mesa: de798bb93708cebdedecefebdc96a82d9481f2aa (master 10.6.0-devel)

  Compiling src/glsl/lower_instructions.cpp ...
src/glsl/lower_instructions.cpp:648:45: error: invalid suffix "d" on floating constant
src/glsl/lower_instructions.cpp:720:45: error: invalid suffix "d" on floating constant


2e7e7b8af6cb9055204e196db9902ec9991cd538 is the first bad commit
commit 2e7e7b8af6cb9055204e196db9902ec9991cd538
Author: Ilia Mirkin <imirkin@alum.mit.edu>
Date:   Thu Jul 17 17:59:32 2014 -0400

    glsl: add a lowering pass for frexp/ldexp with double arguments
    
    Signed-off-by: Ilia Mirkin <imirkin@alum.mit.edu>
    Reviewed-by: Dave Airlie <airlied@redhat.com>

:040000 040000 fa27b7bf59bf78d757b5dc16b047bdbd21bcda2c cbc878cb1e925c9085c29f29ad2009881775dc2f M	src
bisect run success
Comment 1 Ilia Mirkin 2015-02-19 06:46:59 UTC
commit e8e22cf65fc8b9b0c0355540985b073a03c69a51
Author: Ilia Mirkin <imirkin@alum.mit.edu>
Date:   Thu Feb 19 01:44:44 2015 -0500

    glsl: remove bogus 'd' constant qualifiers
    
    0.0 is a double anyways. Apparently my version of gcc was happy with
    0.0d as well, but this is not true of all compilers.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89218
    
    Signed-off-by: Ilia Mirkin <imirkin@alum.mit.edu>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.